syntax = "proto3";
option csharp_namespace = "Protobuf.Shared.Status";

package shared;

message Status{
  StatusCodeEnum status_code = 1;
  string message = 2;
  string add_on = 3;
}

enum StatusCodeEnum{
  OK = 0;
  Traveller = 2001;
  Checking = 2002;
  PARAMETER_MISSING = 4001;
  INVALID_PARAMETER = 4002;
  INVALID_MALI_BOX = 4003;
  VERIFY_CODE_ERROR = 4004;
  BAD_REQUEST = 4005;
  NOT_FOUND = 4006;
  VERIFY_CODE_SEND_ERROR = 5001;
  SERVER_ERROR = 5002;
}